# worktree

./: .gitignore  Cargo.toml  HANDOFF.md  README.md  REFACTOR_CONTEXT.md
.claude/: CLAUDE.md  HANDOFF.md
.claude/commands/: handoff.md  interview.md  pickup.md  refactor.md
.claude/rules/: rust-style.md  testing.md
.claude/rules/cli/: commands.md
.claude/skills/wt/: SKILL.md
.claude/specs/: directory-restructure.md  tui-testable-actions.md  wt-new.md  wt-review.md
.wt/: config.yaml
.wt/tasks/: auto-mark-done.md  branch-pattern.md  fix-diff-fallback.md  fix-unwrap.md  git-metrics.md  parallel-init.md  reuse-git-metrics.md  split-actions.md  split-status.md  task-helpers.md  tmux-helpers.md  transcript-helpers.md
src/: cli.rs  constants.rs  display.rs  error.rs  lib.rs  main.rs
src/commands/: archive.rs  cleanup.rs  completions.rs  create.rs  done.rs  enter.rs  init.rs  list.rs  logs.rs  merged.rs  mod.rs  new.rs  next.rs  reset.rs  review.rs  start.rs  status.rs  tail.rs  validate.rs
src/models/: config.rs  mod.rs  status.rs  store.rs  task.rs
src/services/: command.rs  dependency.rs  git.rs  logs.rs  mod.rs  tmux.rs  transcript.rs  workspace.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: cli.rs  common.rs  integration.rs
tests/cli/: archive.rs  cleanup.rs  completions.rs  create.rs  done.rs  enter.rs  help.rs  init.rs  list.rs  logs.rs  merged.rs  new.rs  next.rs  no_config.rs  reset.rs  scratch.rs  start.rs  status.rs  tail.rs  validate.rs
tests/integration/: cycle_detection.rs  edge_cases.rs  error_messages.rs  json_output.rs  task_store.rs
(+6 files in other folders)
