[package]
name = "wt"
version = "0.1.0"
edition = "2021"
description = "Worktree Task Manager - manage multi-agent parallel development tasks"
license = "MIT"
repository = "https://github.com/yansir/wt"
authors = ["yansir"]
keywords = ["cli", "git", "worktree", "tmux", "agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
